--- a/备案相关.md
+++ b/备案相关.md
@@ -10,8 +10,10 @@ https://help.aliyun.com/knowledge_detail/35876.html
  
 
 
-下面的截图是给cangshu.org做个人实名认证的时候的弹出提示
-![提示信息]（/images/notice_01.png）
+下面的截图是给cangshu.org做个人实名认证的时候的弹出提示  
+
+![提示信息](images/notice_01.png)
+
 
 备案要求之xx
-https://help.aliyun.com/knowledge_detail/36940.html?spm=a3c00.7621327.245611.1.7ef1L6weL6weLP
+- https://help.aliyun.com/knowledge_detail/36940.html?spm=a3c00.7621327.245611.1.7ef1L6weL6weLP
